--- a/appnotas-v2/package.json
+++ b/appnotas-v2/package.json
@@ -31,21 +31,26 @@
 		"vitest": "^4.0.18"
 	},
 	"dependencies": {
-		"@codemirror/lang-css": "^6.3.1",
-		"@codemirror/lang-html": "^6.4.11",
-		"@codemirror/lang-javascript": "^6.2.4",
-		"@codemirror/lang-json": "^6.0.2",
-		"@codemirror/lang-markdown": "^6.5.0",
-		"@codemirror/lang-python": "^6.2.1",
-		"@codemirror/lang-rust": "^6.0.2",
-		"@codemirror/state": "^6.5.4",
-		"@codemirror/theme-one-dark": "^6.1.3",
-		"@codemirror/view": "^6.39.12",
 		"@tauri-apps/api": "^2.9.1",
 		"@tauri-apps/plugin-dialog": "^2.6.0",
-		"codemirror": "^6.0.2",
+		"@tauri-apps/plugin-fs": "^2.4.5",
+		"@tiptap/core": "^3.18.0",
+		"@tiptap/extension-bubble-menu": "^3.18.0",
+		"@tiptap/extension-character-count": "^3.18.0",
+		"@tiptap/extension-code-block-lowlight": "^3.18.0",
+		"@tiptap/extension-floating-menu": "^3.18.0",
+		"@tiptap/extension-image": "^3.18.0",
+		"@tiptap/extension-link": "^3.18.0",
+		"@tiptap/extension-placeholder": "^3.18.0",
+		"@tiptap/extension-task-item": "^3.18.0",
+		"@tiptap/extension-task-list": "^3.18.0",
+		"@tiptap/pm": "^3.18.0",
+		"@tiptap/starter-kit": "^3.18.0",
 		"fuse.js": "^7.1.0",
 		"highlight.js": "^11.11.1",
-		"marked": "^17.0.1"
+		"lowlight": "^3.3.0",
+		"marked": "^17.0.1",
+		"svelte-tiptap": "^3.0.1",
+		"tiptap-markdown": "^0.9.0"
 	}
 }
