--- a/appnotas-v2/package.json
+++ b/appnotas-v2/package.json
@@ -14,7 +14,9 @@
 		"test:ui": "vitest --ui",
 		"tauri": "tauri",
 		"tauri:dev": "tauri dev",
-		"tauri:build": "tauri build"
+		"tauri:build": "tauri build",
+		"package": "bun run scripts/package.js",
+		"package:linux": "bun run scripts/package.js --linux"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^7.0.0",
@@ -31,6 +33,7 @@
 		"vitest": "^4.0.18"
 	},
 	"dependencies": {
+		"@google/generative-ai": "^0.24.1",
 		"@tauri-apps/api": "^2.9.1",
 		"@tauri-apps/plugin-dialog": "^2.6.0",
 		"@tauri-apps/plugin-fs": "^2.4.5",
