--- a/appnotas-v2/src-tauri/Cargo.toml
+++ b/appnotas-v2/src-tauri/Cargo.toml
@@ -21,8 +21,10 @@ tauri-build = { version = "2.5.3", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
-tauri = { version = "2.0.0", features = ["protocol-asset"] }
+tauri = { version = "2.0.0", features = ["protocol-asset", "tray-icon"] }
 tauri-plugin-log = "2"
+tauri-plugin-autostart = "2"
 tauri-plugin-dialog = "2"
 tauri-plugin-fs = "2"
+tauri-plugin-global-shortcut = "2"
 chrono = { version = "0.4", features = ["serde"] }
